--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 *.png
 data/*
 build
+
+examples/faces/lfw-funneled.tgz
+examples/faces/lfw_funneled
+examples/faces/lfw_funneled_gray
+examples/faces/haarcascade_frontalface_*.xml
