add packing to the preprocessing script

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ examples/faces/lfw-funneled.tgz
 examples/faces/lfw_funneled
 examples/faces/lfw_funneled_gray
 examples/faces/haarcascade_frontalface_*.xml
+examples/faces/*.npy.gz
+examples/faces/face_*.txt
